# gia

./: .gitignore  CLI-README.md  DEPLOYMENT.md  IMPLEMENTATION.md  QUICK-START.md  README.md  build.sh  gia.rb  gia.spec  pyproject.toml
examples/: accounts.csv  app-config.yaml  object-type-config.yaml
gia/: __init__.py  applications.py  auth.py  client.py  exceptions.py  templates.py
gia-cli/: cli.py  config.py  utils.py
gia_cli/: __init__.py  __main__.py  interactive.py
tests/: testauth.py  testclient.py  testtemplates.py
