[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gia"
version = "0.1.0"
description = "GIA - Governance Identity API client for PingOne Advanced Identity Cloud (IGA) application endpoints"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyinstaller>=5.0"]

[project.scripts]
gia = "gia_cli.cli:cli"

[tool.setuptools]
packages = ["gia", "gia_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]